[package]
name = "multer-derive-macros"
description = "macros for multer-derive"
version = "0.1.0-alpha"
edition = "2021"
keywords = ["web", "derive", "form-data", "multipart", "multer"]
license = "MIT"
repository = "https://github.com/Neo-Ciber94/multer-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
