[package]
name = "multer-derive"
description = "Provides a trait for create types from multipart form data"
version = "0.1.0"
edition = "2021"

[dependencies]
multer = { version = "2.1.0", features = ["tokio-io"] }
encoding_rs = "0.8.32"
http = "0.2.9"
mime = "0.3.17"
serde_json = { version = "1.0.96", optional = true }
thiserror = "1.0.40"
time = { version = "0.3.20", optional = true, features = [
    "parsing",
    "macros",
    "formatting",
] }
uuid = { version = "1.3.2", optional = true }

[features]
time = ["dep:time"]
uuid = ["dep:uuid"]
json = ["dep:serde_json"]

[dev-dependencies]
tokio = { version = "1.28.0", features = ["rt", "macros"] }
